# gtk-samples

./: ChangeLog.md  LICENSE  README.md  gtk-samples.cabal  interface.glade
src/: Main.hs
src/Gtk/: Samples.hs
src/Gtk/Samples/: Internal.hs
test/Gtk/: SamplesSpec.hs
